--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,7 +134,7 @@ width: 100%;
 list-style: none;
 display: flex;
 flex-wrap: wrap;
-justify-content: space-between;
+justify-content:space-around;
 margin-top: 40px;
 width: 90%;
 }
