--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,6 +252,11 @@ padding: 5px;
     background-color: #F8F9FA
 }
 
+.containerImgInf{
+    display: flex;
+    justify-content: flex-start;
+}
+
 .carrinho li {
     display: flex;
     justify-content: space-between;
@@ -261,8 +266,7 @@ padding: 5px;
 }
 
 .carrinho img {
-    width: 4.30rem;
-    height: 4.30rem;
+    width: 35%;
     border-radius: 10px;
 }
 
@@ -293,6 +297,7 @@ padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 0.5rem;
    
 }
 
@@ -313,7 +318,7 @@ padding: 5px;
 }
 
 
-@media(max-width:320px){
+@media(max-width:480px){
 main {
     margin: 0 1rem;
 }
@@ -390,12 +395,15 @@ main {
 
 .carrinho li {
     height: 4rem;
-  
 }
 
 .carrinho img {
     width: 4rem;
     height: 4rem;
+}
+
+.campoBuscaPorNome{
+   width: 100%;
 }
 
 
